--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "casper",
-    "description": "A clean, minimal default theme for the Ghost publishing platform",
+    "name": "miuh-ghost-theme",
+    "description": "GDPR-compliant Ghost theme based on Casper",
     "demo": "https://demo.ghost.io",
-    "version": "5.9.0",
+    "version": "1.0.0",
     "engines": {
         "ghost": ">=5.0.0"
     },
@@ -40,7 +40,7 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/TryGhost/Casper.git"
+        "url": "https://github.com/mi-uh/miuh-ghost-theme.git"
     },
     "bugs": "https://github.com/TryGhost/Casper/issues",
     "contributors": "https://github.com/TryGhost/Casper/graphs/contributors",
